# onboardAI

./: .gitignore  .graphifyignore  README.md  main.py  pyproject.toml  requirements.txt  structure.txt  test_client.py  test_integration.py
graph/: __init__.py  graph_generator.py
graphify-out/: .graphify_analysis.json  graph.json  manifest.json
graphify-out/cache/: stat-index.json
knowledge/: __init__.py  graphify_adapter.py  onboarding_plan.py  qa_assistant.py  repository_inventory.py
mcp_server/: __init__.py  server.py
onboardai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scanner/: __init__.py  architecture_detector.py  project_scanner.py
website/: index.html  script.js  styles.css
